@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Vehicle {
    - String brand
    - String model
    - int tare
    - double grossWeight
    - int currentKM
    - CustomDate registerDate
    - CustomDate acquisitionDate
    - int checkUpFrequency
    - String plateNumber
    - String type

    + Vehicle(brand, model, tare, grossWeight,\ncurrentKM, registerDate, acquisitionDate,\ncheckUpFrequency, plateNumber, type)
    + setCurrentKM(currentKM)
}

class VehicleRepository {
    + getVehicleList()
}

class OrganizationRepository {
    + getOrganizationByEmployeeEmail(email)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getVehicleRepository()
    + getOrganizationRepository()
}

class RegisterVehicleController {
    + RegisterVehicleController(vehicleRepository)
    + registerVehicle(brand, model, tare, grossWeight,\ncurrentKM, registerDate, acquisitionDate,\ncheckUpFrequency, plateNumber, type)
}

class RegisterVehicleUI {
}

Repositories -> Repositories : instance

RegisterVehicleUI .> RegisterVehicleController

RegisterVehicleController .> Repositories : repositories

Repositories -> "1" VehicleRepository

RegisterVehicleController ..> VehicleRepository : VehicleRepository

Repositories --> "1" OrganizationRepository


VehicleRepository "1" --> "*" Vehicle
@enduml